--- a/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
@@ -112,52 +112,55 @@
 				</div>
 			</form>
 		</div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		<div ng-init="ctrl.getInfosClient(ctrl.compte.clientID)"
-			ng-controller="DemandeController as dmdctrl">
-
-			<form ng-submit="dmdctrl.writeDemDecou()" name="demDecou">
-				<div class="panel panel-info" layout="colomn">
-
-					Quel decouvert souhaiteriez vous avoir? (attention ce montant ne
-					peut pas exceder 40% de vos revenus mensuels) <input type="number"
-						max="{{ctrl.currentUser.revenu * 0.4}}" min="0"
-						ng-model="ctrl.user.decouvert" name="demDecouvert"
-						class="form-control input-sm" required />
-				</div>
-				<div class="has-error" ng-show="demDecou.$dirty">
-					<span ng-show="demDecou.demDecouvert.$error.required">Champ
-						obligatoire</span> <span ng-show="demDecou.demDecouvert.$error.max">Champ
-						invalide : montant trop élevé.</span> <span
-						ng-show="demDecou.demDecouvert.$error.min">Une demande
-						découvert doit être une valeur positive.</span>
-				</div>
-				<div class="row">
-					<div class="form-actions floatRight">
-						<input type="submit"
-							value="Soumettre ma demande à  mon conseiller"
-							class="btn btn-primary btn-sm" ng-disabled="demDecou.$invalid">
-					</div>
-
-				</div>
-			</form>
-		</div>
-	</div>
 </div>
+</div>		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+<!-- 		<div ng-init="ctrl.getInfosClient(ctrl.compte.clientID)" -->
+<!-- 			ng-controller="DemandeController as dmdctrl"> -->
+
+<!-- 			<form ng-submit="dmdctrl.writeDemDecou()" name="demDecou"> -->
+<!-- 				<div class="panel panel-info" layout="colomn"> -->
+
+<!-- 					Quel decouvert souhaiteriez vous avoir? (attention ce montant ne -->
+<!-- 					peut pas exceder 40% de vos revenus mensuels) <input type="number" -->
+<!-- 						max="{{ctrl.currentUser.revenu * 0.4}}" min="0" -->
+<!-- 						ng-model="ctrl.user.decouvert" name="demDecouvert" -->
+<!-- 						class="form-control input-sm" required /> -->
+<!-- 				</div> -->
+<!-- 				<div class="has-error" ng-show="demDecou.$dirty"> -->
+<!-- 					<span ng-show="demDecou.demDecouvert.$error.required">Champ -->
+<!-- 						obligatoire</span> <span ng-show="demDecou.demDecouvert.$error.max">Champ -->
+<!-- 						invalide : montant trop élevé.</span> <span -->
+<!-- 						ng-show="demDecou.demDecouvert.$error.min">Une demande -->
+<!-- 						découvert doit être une valeur positive.</span> -->
+<!-- 				</div> -->
+<!-- 				<div class="row"> -->
+<!-- 					<div class="form-actions floatRight"> -->
+<!-- 						<input type="submit" -->
+<!-- 							value="Soumettre ma demande à  mon conseiller" -->
+<!-- 							class="btn btn-primary btn-sm" ng-disabled="demDecou.$invalid"> -->
+<!-- 					</div> -->
+
+<!-- 				</div> -->
+<!-- 			</form> -->
+<!-- 		</div> -->
+
+
+
+
 <div class="panel panel-default"
 	ng-controller="DemandeController as dmdctrl"
 	ng-init="dmdctrl.listeJustificatifs()">
@@ -169,15 +172,16 @@
 		<table class="table table-hover">
 			<thead>
 				<tr>
-					<th ng-click="ctrl.trier_par('Nom')">Nom</th>
+
 					<th ng-click="ctrl.trier_par('Type')">Type</th>
 					<th ng-click="ctrl.trier_par('Datereception')">Date de
 						reception</th>
+					<th >Telecharger</th>	
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="justificatif in justificatifs | orderBy:tripar ">
-					<td>{{justificatif.id}}</td>
+
 					<td>{{justificatif.type}}</td>
 					<td>{{justificatif.date}}</td>
 					<td><a href={{justificatif.url}}><img class="icone"
