--- a/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
@@ -20,13 +20,22 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th ng-click="ctrl.trier_par('Libelle')">Libelle</th>
-							<th ng-click="ctrl.trier_par('Date')">Date</th>
-							<th ng-click="ctrl.trier_par('Etat')">Etat</th>
+							<th ng-click="ctrl.trier_par('message'); flechetri_1 = !flechetri_1; flechetri_2 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false ">Message
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" />
+							</th>
+							<th ng-click="ctrl.trier_par('dateNotif'); flechetri_2 = !flechetri_2; flechetri_1 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false  ">DateCreation
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_2" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_2" />
+							</th>
+							<th ng-click="ctrl.trier_par('lu'); flechetri_3 = !flechetri_3; flechetri_2 = false; flechetri_1 = false; flechetri_4 = false; flechetri_5 = false  ">Etat
+								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_3" />
+								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_3" />
+							</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="Notification in notifications| orderBy:tripar ">
+						<tr ng-repeat="Notification in notifications| orderBy:tripar:sens ">
 							<td>{{Notification.message}}</td>
 							<td>{{Notification.dateNotif}}</td>
 							<td><img class="langue" src="static/imgs/drapeau.png"
