Oublie de la demande de regeneration de mot de passe et readapation de la demande de nouveau de compte bancaire

--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -3,8 +3,8 @@
 
 			<!-- Default panel contents -->
 			<div class="panel-heading" >
-				<span class="lead">Liste des Comptes <button ng-click="cptCtrl.goToNouveauCompte()" class="floatRight">Nouveau Compte</button></span>
-				
+				<span class="lead">Liste des Comptes <button ng-click="cptctrl.goToNouveauCompte()" class="btn btn-primary btn-sm floatRight">Nouveau Compte</button></span>
+		
 			</div>
 
 			<div class="panel-body" >
