--- a/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
@@ -105,9 +105,12 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="form-actions floatRight">
-						<input type="submit" value="Demander les modifications"
-							class="btn btn-primary btn-sm">
+					<div class="form-actions">
+					<a href="#/cli/" ng-click="dmdctrl.genererPassword(currentUser.id)" class="btn btn-primary btn-sm floatLeft">Nouveau Mot-de-passe</a> 
+
+
+						<input type="submit" value="Demande de modifications"
+							class="btn btn-primary btn-sm floatRight">
 					</div>
 				</div>
 			</form>
