--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -119,7 +119,7 @@
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="codepostal">Revenus brut mensuel estimés</label>
 						<div class="col-md-7">
-							<input 	type="text" 
+							<input 	type="number" 
 									ng-model="dmdctrl.demande_inscription.revenu"
 									name="codepostal" 
 									class="form-control input-sm"
