Ajout test identifiant avant création conseiller

--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -11,7 +11,7 @@
 
 	<div class="panel-body">
 		<div class="formcontainer col-md-12">
-			<form 	ng-submit="ctrl.creaCons()" 
+			<form 	ng-submit="ctrl.checkCreaCons()" 
 					name="formCreaCons"
 					class="form-horizontal">
 				<div class="form-group col-md-12">
