--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemandeDetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemandeDetailCompte.html
@@ -65,10 +65,6 @@
 		<table class="table table-hover">
 			<thead>
 				<tr>
-					<th ng-click="dmdctrl.trier_par('nomDuFichier'); flechetri_1 = !flechetri_1; flechetri_2 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false ">Nom
-						<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_1" />
-						<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_1" />
-					</th>
 					<th ng-click="dmdctrl.trier_par('type'); flechetri_2 = !flechetri_2; flechetri_1 = false; flechetri_3 = false; flechetri_4 = false; flechetri_5 = false  ">Type
 						<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_2" />
 						<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_2" />
@@ -84,11 +80,11 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="justificatif in justificatifs | orderBy:tripar:sens ">
-					<td>{{justificatif.nomDuFichier}}</td>
+
 					<td>{{justificatif.type}}</td>
 					<td>{{justificatif.date}}</td>
 					<td><a
-						href="/justificatifs/clients/3/3_NomClient2_PrenomClient2_Domicile.pdf"><img
+						href="{{justificatif.path}}{{justificatif.nomDuFichier}}"><img
 							class="icone" src="static/imgs/download.png" /></a></td>
 				</tr>
 			</tbody>
