--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -54,7 +54,7 @@
 									name="telephone"
 									class="form-control input-sm"
 									placeholder="Entez votre telephone" 
-									pattern="^((\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$"
+									pattern="[0-9]{10}"
 									required />
 							<div class="has-error" ng-show="formCreaCons.telephone.$dirty">
 								<span ng-show="formCreaCons.telephone.$error.required">Champ
